crates/ruff_python_parser/tests/snapshots/invalid_syntax@pep_798_unpacking_comprehensions_py314.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/pep_798_unpacking_comprehensions_py314.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..126,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 44..59,
                    value: ListComp(
                        ExprListComp {
                            node_index: NodeIndex(None),
                            range: 44..59,
                            elt: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 45..47,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 46..47,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 48..58,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 52..53,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 57..58,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 60..75,
                    value: SetComp(
                        ExprSetComp {
                            node_index: NodeIndex(None),
                            range: 60..75,
                            elt: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 61..63,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 62..63,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 64..74,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 68..69,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 73..74,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 76..92,
                    value: DictComp(
                        ExprDictComp {
                            node_index: NodeIndex(None),
                            range: 76..92,
                            key: None,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 79..80,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 81..91,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 85..86,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 90..91,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 93..108,
                    value: Generator(
                        ExprGenerator {
                            node_index: NodeIndex(None),
                            range: 93..108,
                            elt: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 94..96,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 95..96,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 97..107,
                                    node_index: NodeIndex(None),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 101..102,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 106..107,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 109..125,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 109..125,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 109..110,
                                    id: Name("f"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 110..125,
                                node_index: NodeIndex(None),
                                args: [
                                    Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 111..124,
                                            elt: Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 111..113,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 112..113,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 114..124,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 118..119,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 123..124,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: false,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                            cast_kind: None,
                            is_string_tag: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.14"}
2 | [*x for x in y]
  |  ^^ Syntax Error: Cannot use iterable unpacking in a list comprehension on Python 3.14 (syntax was added in Python 3.15)
3 | {*x for x in y}
4 | {**x for x in y}
  |


  |
1 | # parse_options: {"target-version": "3.14"}
2 | [*x for x in y]
3 | {*x for x in y}
  |  ^^ Syntax Error: Cannot use iterable unpacking in a set comprehension on Python 3.14 (syntax was added in Python 3.15)
4 | {**x for x in y}
5 | (*x for x in y)
  |


  |
2 | [*x for x in y]
3 | {*x for x in y}
4 | {**x for x in y}
  |  ^^^ Syntax Error: Cannot use dictionary unpacking in a dict comprehension on Python 3.14 (syntax was added in Python 3.15)
5 | (*x for x in y)
6 | f(*x for x in y)
  |


  |
3 | {*x for x in y}
4 | {**x for x in y}
5 | (*x for x in y)
  |  ^^ Syntax Error: Cannot use iterable unpacking in a generator expression on Python 3.14 (syntax was added in Python 3.15)
6 | f(*x for x in y)
  |


  |
4 | {**x for x in y}
5 | (*x for x in y)
6 | f(*x for x in y)
  |   ^^ Syntax Error: Cannot use iterable unpacking in a generator expression on Python 3.14 (syntax was added in Python 3.15)
